[package]
name = "sharedptr"
version = "0.2.0"
authors = ["yi lu <luyikk@126.com>"]
edition = "2018"
repository = "https://github.com/luyikk/SharedPtr"
documentation = "https://docs.rs/sharedptr"
description = "Rust Sharedptr."
license = "MIT/Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
